fix a bug with cropped box-shadow

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ header p {
     border-radius: 1rem;
     box-shadow: 0px 30px 60px rgba(61, 108, 236, 0.15);
     margin-bottom: 2rem;
+    overflow: visible;
 }
 
 .card-header {
